Dev environment fixes

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/index.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,4 @@
-Hello World!
+{% extends "MopaBootstrapBundle::layout.html.twig" %}
+{% block container -%}
+    {% include 'ActedLegalDocsBundle:Default:menu.html.twig' %}
+{%- endblock %}
