--- a/src/Acted/LegalDocsBundle/Resources/views/Default/menu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/menu.html.twig
@@ -2,6 +2,7 @@
     <div class="header">
         <ul class="nav nav-pills pull-right">
             <li><a href="{{ path('template_index') }}">Templates</a></li>
+            <li><a href="{{ path('performancecontract_index') }}">Performance Contract</a></li>
         </ul>
         <h3 class="text-muted">Templates CRUD Example</h3>
     </div>
