--- a/app/Resources/views/template/show.html.twig
+++ b/app/Resources/views/template/show.html.twig
@@ -10,6 +10,10 @@
                 <td>{{ template.id }}</td>
             </tr>
             <tr>
+                <th>Type_id</th>
+                <td>{{ template.typeid }}</td>
+            </tr>
+            <tr>
                 <th>Template</th>
                 <td>{{ template.template }}</td>
             </tr>
