--- a/app/Resources/views/template/index.html.twig
+++ b/app/Resources/views/template/index.html.twig
@@ -7,6 +7,7 @@
         <thead>
             <tr>
                 <th>Id</th>
+                <th>Type_id</th>
                 <th>Template</th>
                 <th>Is_active</th>
                 <th>Actions</th>
@@ -16,6 +17,7 @@
         {% for template in templates %}
             <tr>
                 <td><a href="{{ path('template_show', { 'id': template.id }) }}">{{ template.id }}</a></td>
+                <td>{{ template.type }}</td>
                 <td>{{ template.template }}</td>
                 <td>{% if template.isactive %}Yes{% else %}No{% endif %}</td>
                 <td>
