--- a/app/Resources/views/template/edit.html.twig
+++ b/app/Resources/views/template/edit.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {{ tinymce_init() }}
     <h1>Template edit</h1>
 
     {{ form_start(edit_form) }}
