--- a/app/Resources/views/template/index.html.twig
+++ b/app/Resources/views/template/index.html.twig
@@ -1,15 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Template list</h1>
+    <h1>Templates list</h1>
 
     <table>
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Type_id</th>
-                <th>Template</th>
-                <th>Is_active</th>
+                <th>Type</th>
+                <th>Is active</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -18,7 +17,6 @@
             <tr>
                 <td><a href="{{ path('template_show', { 'id': template.id }) }}">{{ template.id }}</a></td>
                 <td>{{ template.type }}</td>
-                <td>{{ template.template }}</td>
                 <td>{% if template.isactive %}Yes{% else %}No{% endif %}</td>
                 <td>
                     <ul>
