--- a/src/Acted/LegalDocsBundle/Resources/views/Default/menu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/menu.html.twig
@@ -2,7 +2,7 @@
     <div class="header">
         <ul class="nav nav-pills pull-right">
             <li><a href="{{ path('template_index') }}">Templates</a></li>
-            <li><a href="{{ path('performancecontract_index') }}">Performance Contract</a></li>
+            <li><a href="{{ path('performancecontract_index') }}">Performance Contracts</a></li>
         </ul>
     </div>
 {% endblock %}
