Invoice type done

--- a/app/Resources/views/performancecontract/index.html.twig
+++ b/app/Resources/views/performancecontract/index.html.twig
@@ -48,7 +48,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('performancecontract_new') }}">Create a new entry</a>
+            <a href="{{ path('performancecontract_new') }}">Create a new contract</a>
         </li>
     </ul>
 {% endblock %}
