--- a/src/Acted/LegalDocsBundle/Resources/views/Default/menu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/menu.html.twig
@@ -3,6 +3,7 @@
         <ul class="nav nav-pills pull-right">
             <li><a href="{{ path('template_index') }}">Templates</a></li>
             <li><a href="{{ path('performancecontract_index') }}">Performance Contracts</a></li>
+            <li><a href="{{ path('invoicetype_index') }}">Invoices</a></li>
         </ul>
     </div>
 {% endblock %}
