Quotation type done

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/menu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/menu.html.twig
@@ -4,6 +4,7 @@
             <li><a href="{{ path('template_index') }}">Templates</a></li>
             <li><a href="{{ path('performancecontract_index') }}">Performance Contracts</a></li>
             <li><a href="{{ path('invoicetype_index') }}">Invoices</a></li>
+            <li><a href="{{ path('quotationtype_index') }}">Quotations</a></li>
         </ul>
     </div>
 {% endblock %}
