--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/show.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/show.html.twig
@@ -39,27 +39,24 @@
             <div class="user-rating">
                 <div class="stars">
                     <div class="star">
-                        <div style="width: 100%" class="fill-star"></div>
+                        <div class="fill-star"></div>
                     </div>
-
                     <div class="star">
-                        <div style="width: 100%" class="fill-star"></div>
+                        <div class="fill-star"></div>
                     </div>
-
                     <div class="star">
-                        <div style="width: 100%" class="fill-star"></div>
+                        <div class="fill-star"></div>
                     </div>
-
                     <div class="star">
-                        <div style="width: 100%" class="fill-star"></div>
+                        <div class="fill-star"></div>
                     </div>
-
                     <div class="star">
-                        <div style="width: 30%" class="fill-star"></div>
+                        <div class="fill-star"></div>
                     </div>
                 </div>
 
-                <div class="rating">4.5/5.0 (16 Votes)</div>
+                <div class="rating">{{ artist.rating }}/5.0 ({{ artist.ratings|length }} Votes)</div>
+                <span id="raitingVal" class="hidden">{{ artist.rating }}</span>
             </div>
         </div>
         <div class="controls">
@@ -521,6 +518,7 @@
         © AKKROO MMXV MATICULOUSLY HAND CRAFTED IN ENGLAND 1.386.503 PIECES OF DATA CAPTURED AND CAUTING
     </p>
 </footer>
-
+</body>
+</html>
 
 <script src="{{ asset('js/javascript.js') }}"></script>
