--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/show.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/show.html.twig
@@ -108,6 +108,7 @@
                 <tr {% if loop.index is odd %}class="color"{% endif %}>
                     <article class="item clearfix">
                         <h2>{{ offer.title|slice(0, 20) ~ '...' }} <span class="price">Price: from {{ offer.price }} EUR</span></h2>
+
                         <img class="preview" src="assets/images/playing_piano.jpg" alt="Preview">
 
                         <div class="video">
@@ -141,35 +142,14 @@
                 {{ knp_pagination_render(offers) }}
             </div>
 
-            <ul class="row pagination">
-                <li>
-                    <a href="#">
-                        <div class="button active">1</div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <div class="button">2</div>
-                    </a>
-                </li>
-                <li>
-                    <a class="next-page" href="#"><span class="glyphicon glyphicon-play"></span></a>
-                </li>
-            </ul>
-
             <button class="show-more-info">
                 Show More
             </button>
         </section>
         <section id="biography" class="profile-block biography">
             <div class="title"><span>Biography</span></div>
-
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.
+                {{ artist.user.profile.description }}
             </p>
         </section>
         <section id="feedbacks" class="profile-block feedbacks">
@@ -180,28 +160,29 @@
 
                 <div class="stars">
                     <div class="star">
-                        <div style="width: 100%" class="fill-star"></div>
+                        <div style="" class="fill-star"></div>
                     </div>
 
                     <div class="star">
-                        <div style="width: 100%" class="fill-star"></div>
+                        <div style="" class="fill-star"></div>
                     </div>
 
                     <div class="star">
-                        <div style="width: 100%" class="fill-star"></div>
+                        <div style="" class="fill-star"></div>
                     </div>
 
                     <div class="star">
-                        <div style="width: 100%" class="fill-star"></div>
+                        <div style="" class="fill-star"></div>
                     </div>
 
                     <div class="star">
-                        <div style="width: 100%" class="fill-star"></div>
+                        <div style="" class="fill-star"></div>
                     </div>
                 </div>
             </div>
 
             <article class="feedback-block">
+                {{ dump(artist.ratings.first()) }}
                 <div class="row">
                     <div class="avatar">
                         <img src="assets/images/avatar.jpg" alt="Avatar">
