--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/show.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/show.html.twig
@@ -1,439 +1,17 @@
 
 {% include 'ActedLegalDocsBundle:Default:header.html.twig' %}
 
-<div class="header-background" style="background-image: url({{ artist.user.background }})">
-    <div class="background-stripe"></div>
-</div>
-<main>
-    <section class="profile-info container">
-        <img class="avatar" src="{{ artist.user.avatar }}" alt="Avatar">
-        <div class="info">
-            <div class="username">{{ artist.name }}</div>
+{% include 'ActedLegalDocsBundle:Profile:userSection.html.twig' %}
 
-            <div class="specializations">
-                <ul>
-                    <li><a href="#">Jazz Vocalist</a>
-                        <div class="divider"></div>
-                    </li>
-                    <li><a href="#">Jazz Pianist</a>
-                        <div class="divider"></div>
-                    </li>
-                    <li><a href="#">Vocalist</a>
-                        <div class="divider"></div>
-                    </li>
-                    <li><a href="#">Song Writer</a>
-                        <div class="divider"></div>
-                    </li>
-                    <li><a href="#">See All <span class="glyphicon glyphicon-play" aria-hidden="true"></span></a>
-                    </li>
-                </ul>
-            </div>
+{% include 'ActedLegalDocsBundle:Profile:ordersSection.html.twig' %}
 
-            <div class="from">From {{ artist.city.name }}</div>
+{% include 'ActedLegalDocsBundle:Profile:biographySection.html.twig' %}
 
-            <div class="price">
-                <img src="{{ asset('assets/images/price_ic.png') }}" alt="Price">
-                ${{ artist.user.profile.minPrice }} - ${{ artist.user.profile.maxPrice }} per event
-            </div>
+{% include 'ActedLegalDocsBundle:Profile:feedbacksSection.html.twig' %}
 
-            <div class="user-rating">
-                <div class="stars">
-                    <div class="star">
-                        <div class="fill-star"></div>
-                    </div>
-                    <div class="star">
-                        <div class="fill-star"></div>
-                    </div>
-                    <div class="star">
-                        <div class="fill-star"></div>
-                    </div>
-                    <div class="star">
-                        <div class="fill-star"></div>
-                    </div>
-                    <div class="star">
-                        <div class="fill-star"></div>
-                    </div>
-                </div>
+{% include 'ActedLegalDocsBundle:Profile:mediaSection.html.twig' %}
 
-                <div class="rating">{{ artist.rating }}/5.0 ({{ artist.ratings|length }} Votes)</div>
-                <span id="raitingVal" class="hidden">{{ artist.rating }}</span>
-            </div>
-        </div>
-        <div class="controls">
-            <div class="button-gradient follow">
-                <button class="btn">Follow me</button>
-            </div>
+{% include 'ActedLegalDocsBundle:Profile:feedsSection.html.twig' %}
 
-            <div class="button-gradient filled">
-                <button class="btn">REQUEST FREE QUOTE</button>
-            </div>
-        </div>
-    </section>
+{% include 'ActedLegalDocsBundle:Default:footer.html.twig' %}
 
-    <section class="menu">
-        <div class="container">
-            <ul>
-                <li>
-                    <div class="menu-item">
-                        <a class="anchor-scroll" href="#biography">
-                            <div class="hover-bg">Bio</div>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="menu-item">
-                        <a class="anchor-scroll" href="#feedbacks">
-                            <div class="hover-bg">
-                                Feedbacks
-                            </div>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="menu-item">
-                        <a class="anchor-scroll" href="#media">
-                            <div class="hover-bg">
-                                Media
-                            </div>
-                        </a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </section>
-
-    <div class="container no-pad">
-        <section class="price-list">
-            {% for offer in offers %}
-                <tr {% if loop.index is odd %}class="color"{% endif %}>
-                    <article class="item clearfix">
-                        <h2>{{ offer.title|slice(0, 20) ~ '...' }} <span class="price">Price: from {{ offer.price }} EUR</span></h2>
-
-                        <img class="preview" src="assets/images/playing_piano.jpg" alt="Preview">
-
-                        <div class="video">
-                            <img src="assets/images/playing_piano.jpg" alt="">
-                            <span class="glyphicon glyphicon-play"></span>
-
-                            <div class="name">
-                                <div class="name-text">Jazz Vocalist</div>
-                            </div>
-                        </div>
-
-                        <div class="info">
-                            <p>
-                                {{ offer.comments }}
-                            </p>
-
-                            <div class="controls">
-                                <div class="button-gradient follow">
-                                    <button class="btn">REQUEST FREE QUOTE</button>
-                                </div>
-
-                                <p>
-                                    <a href="#">Technical requirements</a>
-                                </p>
-                            </div>
-                        </div>
-                    </article>
-                </tr>
-            {% endfor %}
-            <div class="navigation">
-                {{ knp_pagination_render(offers) }}
-            </div>
-
-            <button class="show-more-info">
-                Show More
-            </button>
-        </section>
-        <section id="biography" class="profile-block biography">
-            <div class="title"><span>Biography</span></div>
-            <p>
-                {{ artist.user.profile.description }}
-            </p>
-        </section>
-        <section id="feedbacks" class="profile-block feedbacks">
-            <div class="title">
-                <span>
-                     6 Feedback's
-                </span>
-
-                <div class="stars">
-                    <div class="star">
-                        <div style="" class="fill-star"></div>
-                    </div>
-
-                    <div class="star">
-                        <div style="" class="fill-star"></div>
-                    </div>
-
-                    <div class="star">
-                        <div style="" class="fill-star"></div>
-                    </div>
-
-                    <div class="star">
-                        <div style="" class="fill-star"></div>
-                    </div>
-
-                    <div class="star">
-                        <div style="" class="fill-star"></div>
-                    </div>
-                </div>
-            </div>
-
-            <article class="feedback-block">
-                {{ dump(artist.ratings.first()) }}
-                <div class="row">
-                    <div class="avatar">
-                        <img src="assets/images/avatar.jpg" alt="Avatar">
-                        <p class="name">Natali</p>
-                    </div>
-
-                    <div class="text">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        </p>
-                    </div>
-                </div>
-            </article>
-
-            <article class="feedback-block">
-                <div class="row">
-                    <div class="avatar">
-                        <img src="assets/images/avatar.jpg" alt="Avatar">
-                        <p class="name">Natali</p>
-                    </div>
-
-                    <div class="text show-more">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                        <a href="#" class="more">+more</a>
-
-                        <div class="gradient"></div>
-                    </div>
-                </div>
-            </article>
-
-            <article class="feedback-block">
-                <div class="row">
-                    <div class="avatar">
-                        <img src="assets/images/avatar.jpg" alt="Avatar">
-                        <p class="name">Natali</p>
-                    </div>
-
-                    <div class="text">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        </p>
-                    </div>
-                </div>
-            </article>
-
-            <ul class="row pagination">
-                <li>
-                    <a href="#">
-                        <div class="button active">1</div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <div class="button">2</div>
-                    </a>
-                </li>
-                <li>
-                    <a class="next-page" href="#"><span class="glyphicon glyphicon-play"></span></a>
-                </li>
-            </ul>
-
-            <button class="show-more-info">
-                Show More
-            </button>
-        </section>
-        <section id="media" class="profile-block media">
-            <div class="title"><span>Media</span></div>
-
-            <ul>
-                <li>
-                    <a class="tab active" data-target="#section-photo" href="#">
-                        Photo
-                        <div class="badge">{{ artist.user.profile.photoList|length }}</div>
-                        <div class="circle"></div>
-                    </a>
-                </li>
-                <li>
-                    <a class="tab" data-target="#section-video" href="#">
-                        Video
-                        <div class="badge">{{ artist.user.profile.videoList|length }}</div>
-                        <div class="circle"></div>
-                    </a>
-                </li>
-                <li>
-                    <a class="tab" data-target="#section-audio" href="#">
-                        Audio
-                        <div class="badge">{{ artist.user.profile.audioList|length }}</div>
-                        <div class="circle"></div>
-                    </a>
-                </li>
-            </ul>
-
-            <div class="row">
-
-                <section class="media-content wrapper" id="section-photo">
-                    <div class="slider-controls">
-                        <span id="prevSlide"></span>
-                        <span id="nextSlide"></span>
-                    </div>
-
-                    <ul class="bxslider">
-                        {% for photo in artist.user.profile.photoList %}
-                            <li><img src="{{ photo.link }}" alt="{{ photo.name }}"></li>
-                        {% endfor %}
-                    </ul>
-
-                    <div id="photo-pager" class="bx-pager">
-                        {% for photo in artist.user.profile.photoList %}
-                            <div class="scale-thumb thumb{{ loop.index }}">
-                                <a data-slide-index="{{ loop.index0 }}" href=""><img src="{{ photo.link }}"/></a>
-                            </div>
-                        {% endfor %}
-                    </div>
-                </section>
-
-
-                <section class="media-content wrapper" id="section-video" >
-                    <div class="slider-controls">
-                        <span id="nextVideoSlide"></span>
-                        <span id="prevVideoSlide"></span>
-                    </div>
-
-                    <ul class="bxVideoSlider">
-                        {% for video in artist.user.profile.videoList %}
-                            <li><iframe src="{{ video.link }}" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></li>
-                        {% endfor %}
-                    </ul>
-
-                    <div id="video-pager" class="bx-pager">
-                        {% for video in artist.user.profile.videoList %}
-                            <div class="scale-thumb thumb{{ loop.index }}">
-                                <a data-slide-index="{{ loop.index0 }}" href=""><img id="{{ video.videoId }}" src=""/></a>
-                            </div>
-                        {% endfor %}
-                    </div>
-                </section>
-
-                <section class="media-content wrapper" id="section-audio" >
-                    {% for audio in artist.user.profile.audioList %}
-                        <h2>{{ audio.name }}</h2>
-                        <audio controls="true" name="media"><source src="{{ audio.link }}" type="audio/mpeg"></audio>
-                    {% endfor %}
-                </section>
-
-            </div>
-
-
-        </section>
-        <section class="profile-block social-media clearfix">
-            <div class="title"><span>My feed</span></div>
-
-            <div class="col-xs-12 no-pad">
-
-                <div class="col-lg-4">
-                    <div class="fb-post" data-href="https://www.facebook.com/20531316728/posts/10154009990506729/" data-width="100%"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://ru-ru.facebook.com/20531316728/posts/10154009990506729/">Опубликовано <a href="https://www.facebook.com/facebook/">Facebook</a>&nbsp;<a href="https://ru-ru.facebook.com/20531316728/posts/10154009990506729/">27 августа 2015 г.</a></blockquote></div></div>
-                </div>
-
-                <div class="col-lg-4">
-                    <div class="fb-post" data-href="https://www.facebook.com/20531316728/posts/10154009990506729/" data-width="100%"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://ru-ru.facebook.com/20531316728/posts/10154009990506729/">Опубликовано <a href="https://www.facebook.com/facebook/">Facebook</a>&nbsp;<a href="https://ru-ru.facebook.com/20531316728/posts/10154009990506729/">27 августа 2015 г.</a></blockquote></div></div>
-                </div>
-
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <div class="fb-post" data-href="https://www.facebook.com/20531316728/posts/10154009990506729/" data-width="100%"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://ru-ru.facebook.com/20531316728/posts/10154009990506729/">Опубликовано <a href="https://www.facebook.com/facebook/">Facebook</a>&nbsp;<a href="https://ru-ru.facebook.com/20531316728/posts/10154009990506729/">27 августа 2015 г.</a></blockquote></div></div>
-                </div>
-
-                <ul class="row pagination">
-                    <li>
-                        <a href="#">
-                            <div class="button active">1</div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="button">2</div>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="next-page" href="#"><span class="glyphicon glyphicon-play"></span></a>
-                    </li>
-                </ul>
-            </div>
-
-            <button class="show-more-info">
-                Show More
-            </button>
-        </section>
-    </div>
-</main>
-
-<footer class="footer-dark">
-    <div class="social-icons">
-        <ul>
-            <li><a href="#"><div class="icon facebook"></div></a></li>
-            <li><a href="#"><div class="icon instagram"></div></a></li>
-            <li><a href="#"><div class="icon twitter"></div></a></li>
-        </ul>
-    </div>
-
-    <div class="container menus">
-        <div class="row">
-            <div class="col-sm-4">
-
-                <ul>
-                    <li class="title">Company</li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Press</a></li>
-                    <li><a href="#">Contact us</a></li>
-                    <li><a href="#">User agreement</a></li>
-                    <li><a href="#">Privacy</a></li>
-                </ul>
-
-            </div>
-
-            <div class="col-sm-4">
-
-                <ul>
-                    <li class="title">Discover</li>
-                    <li><a href="#">Browse talents</a></li>
-                    <li><a href="#">Residencies</a></li>
-                    <li><a href="#">Sign up</a></li>
-                </ul>
-
-            </div>
-
-            <div class="col-sm-4">
-
-                <ul>
-                    <li class="title">Support</li>
-                    <li><a href="#">How it works</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">Forum</a></li>
-                </ul>
-
-            </div>
-        </div>
-    </div>
-
-    <p class="copyright">
-        © AKKROO MMXV MATICULOUSLY HAND CRAFTED IN ENGLAND 1.386.503 PIECES OF DATA CAPTURED AND CAUTING
-    </p>
-</footer>
-</body>
-</html>
-
-<script src="{{ asset('js/javascript.js') }}"></script>
