--- a/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
@@ -52,6 +52,7 @@
         © AKKROO MMXV MATICULOUSLY HAND CRAFTED IN ENGLAND 1.386.503 PIECES OF DATA CAPTURED AND CAUTING
     </p>
 </footer>
+{% include 'ActedLegalDocsBundle:Default:registration.html.twig' %}
 <script src="{{ asset('js/javascript.js') }}"></script>
 </body>
 </html>
